--- a/src/index.css
+++ b/src/index.css
@@ -27,9 +27,12 @@ All colors MUST be HSL.
     --destructive-foreground: 0 0% 100%;
     --success: 142 76% 36%;
     --success-foreground: 0 0% 100%;
-    --warning: 38 92% 50%;
-    --warning-foreground: 0 0% 100%;
-    --border: 220 13% 91%;
+      --warning: 38 92% 50%;
+      --warning-foreground: 0 0% 100%;
+      --mercado-livre: 45 93% 47%;
+      --shopee: 25 95% 53%;
+      --instagram: 330 81% 60%;
+      --border: 220 13% 91%;
     --input: 220 13% 91%;
     --ring: 258 56% 52%;
     --radius: 0rem; /* Corporate style: no rounding */
@@ -112,6 +115,9 @@ All colors MUST be HSL.
     --success-foreground: 0 0% 100%;
     --warning: 38 92% 50%;
     --warning-foreground: 0 0% 100%;
+    --mercado-livre: 45 93% 47%;
+    --shopee: 25 95% 53%;
+    --instagram: 330 81% 60%;
     --border: 0 0% 85%;
     --input: 0 0% 85%;
     --ring: 100 27% 43%;
@@ -189,6 +195,9 @@ All colors MUST be HSL.
     --success-foreground: 0 0% 100%;
     --warning: 38 92% 50%;
     --warning-foreground: 0 0% 100%;
+    --mercado-livre: 45 93% 47%;
+    --shopee: 25 95% 53%;
+    --instagram: 330 81% 60%;
     --border: 210 30% 86%;
     --input: 210 30% 86%;
     --ring: 210 90% 50%;
@@ -271,6 +280,9 @@ All colors MUST be HSL.
     --success-foreground: 0 0% 100%;
     --warning: 38 92% 50%;
     --warning-foreground: 0 0% 100%;
+    --mercado-livre: 45 93% 47%;
+    --shopee: 25 95% 53%;
+    --instagram: 330 81% 60%;
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
